# rusty-chip8

./: .gitignore  Cargo.toml  README.md  sprite_bug.md
programs/Chip8/: test.ch8  test.chip8  while_true.chip8
src/: debug.rs  disas.rs  display.rs  errors.rs  gui.rs  io.rs  main.bak.rs  main.rs  mem.rs  systems.rs
