[package]
name = "rusty-chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26"
egui-wgpu = "0.26.0"
egui-winit = { version = "0.26", default-features = false, features = ["links"] }
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = "0.15.0"
winit = "0.29"
winit_input_helper = "0.15"
rand = "0.8.5"
